Indentation et espacement uniforme dans l'ensemble du code. Ajout de la distinction des protocoles Tapir 1.4 et de la dernière version de Tapir du 2011-10-26 incluant les décisions Decision-2009-12-07_1 à Decision-2011-10-16_10.